--- a/mqtt-apiserver/docker-compose.yml
+++ b/mqtt-apiserver/docker-compose.yml
@@ -9,7 +9,9 @@ services:
       - 1883:1883
     restart: unless-stopped
     networks:
-      - docker-net
+      docker-net:
+        # fix ip
+        ipv4_address: 172.25.0.2
   
   api-server:
     container_name: apiserver
